fix: detalle de lso productos y iamegen responsiva
